2007-07-13  Akim Demaille  <demaille@gostai.com>

	Fix the definition of the slots of the primitive classes
	Here's the catch: I was using the operator[] to define the
	type of each base class, but operator[] updates the slots, i.e.,
	it first looks for the slot in the hierarchy, and then updates
	it!  As a result, it was only the version of Object that was
	changed several times, and every other class was pointing to it.
	* src/object/fwd.hh: Simplify.

	* src/object/object.cc, src/object/object.hh, src/object/object.hxx
	(set_slot, update_slot, remove_slot): Rename as...
	(slot_set, slot_update, slot_remove): these.
	Use BOOST_FOREACH.
	* src/object/primitives.cc: Don't put in the anonymous namespace
	what must be visible from other compilation units.
	Use slot_set.
	* src/object/object-test-primitives.cc: Add missing dereferencing.
	* src/object/object-test-slot.cc: Adjust.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Improve primitive support
	* src/object/fwd.hh (APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT)
	(APPLY_ON_ALL_PRIMITIVES, objects_type, primitive_type): New.
	Use these macros where possible to factor the list of primitives.
	(primitive): A new kind of Atom.
	* src/object/atom.cc, src/object/atom.hh, src/object/atom.hxx:
	Move the declaration of the float_class primitives to...
	* src/object/primitives.hh, src/object/primitives.cc: Here.
	(primitive_traits): New.
	* src/object/object.cc, src/object/object.hh: Adjust.
	* src/object/object-test-primitives.cc: Ditto.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Fix the initialization of the base class objects
	* src/object/primitives.hh, src/object/primitives.cc: New, taken
	from...
	* src/object/object.cc, src/object/object.hh, src/object/object.hxx:
	Here.
	* src/object/Makefile.am: Adjust.
	* src/object/primitives.hh, src/object/primitives.cc
	(root_classes_initialize, root_classes_initialized): New.
	* src/object/object.cc, src/object/object.hh, src/object/object.hxx:
	Use some assertions.